Add a service make_multiple_plans
This service is a simplified batch version of make_plan, without clearing the costmap around
the current robot pose and without any tolerance around the goal poses.

--- a/move_base_msgs/CMakeLists.txt
+++ b/move_base_msgs/CMakeLists.txt
@@ -6,8 +6,14 @@ find_package(catkin REQUIRED
         message_generation
         actionlib_msgs
         geometry_msgs
+        nav_msgs
         )
 
+# services
+add_service_files(
+  FILES
+  GetMultiplePlans.srv
+)
 
 # actions
 add_action_files(
@@ -20,9 +26,13 @@ generate_messages(
     DEPENDENCIES
         actionlib_msgs
         geometry_msgs
+        nav_msgs
 )
 
 catkin_package(
+    CATKIN_DEPENDS 
+        message_runtime
+        actionlib_msgs
+        geometry_msgs
+        nav_msgs
 )
-
-
