--- a/move_base_msgs/package.xml
+++ b/move_base_msgs/package.xml
@@ -18,10 +18,11 @@
     <build_depend>actionlib_msgs</build_depend>
     <build_depend>geometry_msgs</build_depend>
     <build_depend>message_generation</build_depend>
+    <build_depend>nav_msgs</build_depend>
 
     <run_depend>actionlib_msgs</run_depend>
     <run_depend>geometry_msgs</run_depend>
     <run_depend>message_runtime</run_depend>
-
+    <run_depend>nav_msgs</run_depend>
 </package>
 
