Add a service make_multiple_plans
This service is a simplified batch version of make_plan, without clearing the costmap around
the current robot pose and without any tolerance around the goal poses.

--- a/move_base/CMakeLists.txt
+++ b/move_base/CMakeLists.txt
@@ -4,6 +4,9 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 set(ROS_BUILD_TYPE Debug)
 rosbuild_init()
 
+#uncomment if you have defined services
+rosbuild_gensrv()
+
 rosbuild_find_ros_package(dynamic_reconfigure)
 include(${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake)
 gencfg()
