--- a/navfn/package.xml
+++ b/navfn/package.xml
@@ -24,6 +24,7 @@
     <build_depend>cmake_modules</build_depend>
     <build_depend>costmap_2d</build_depend>
     <build_depend>geometry_msgs</build_depend>
+    <build_depend>message_generation</build_depend>
     <build_depend>nav_core</build_depend>
     <build_depend>nav_msgs</build_depend>
     <build_depend>netpbm</build_depend> <!-- This is a test dependency -->
@@ -37,6 +38,7 @@
 
     <run_depend>costmap_2d</run_depend>
     <run_depend>geometry_msgs</run_depend>
+    <run_depend>message_runtime</run_depend>
     <run_depend>nav_core</run_depend>
     <run_depend>nav_msgs</run_depend>
     <run_depend>pcl_conversions</run_depend>
@@ -46,6 +48,8 @@
     <run_depend>roscpp</run_depend>
     <run_depend>tf</run_depend>
     <run_depend>visualization_msgs</run_depend>
+
+    <test_depend>rosunit</test_depend>
 
     <export>
         <nav_core plugin="${prefix}/bgp_plugin.xml" />
